Opened 5 months ago
Closed 4 months ago
#19079 closed bug (fixed)
FAT: Renaming folder after huge file move causes KDL
Reported by: | mbrumbelow | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | File Systems/FAT | Version: | R1/beta5 |
Keywords: | Cc: | Jim906 | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Version: hrev58097
CPU: 8 Processor Intel Core i5-8279U @ 2.40 Ghz
Memory: 16226 MiB Memory
- Create 1TB binary file
- Copy file to an external USB SSD drive formatted FAT32
- Place the file in a newly created directory with any name
- Rename the new folder and hit enter or click away
- KDL (See attached)
Attachments (1)
Change History (6)
by , 5 months ago
Attachment: | crash2.jpg added |
---|
comment:1 by , 5 months ago
Cc: | added |
---|---|
Platform: | x86-64 → All |
comment:2 by , 5 months ago
Summary: | Renaming Folder After Huge File Move Causes Crash → FAT: Renaming folder after huge file move causes KDL |
---|
comment:3 by , 5 months ago
mbrumbelow, thank you for reporting this. Could you tell me the total capacity (including used space and free space) of the FAT32 partition on this USB SSD drive? If might also be informative if you could run driveinfo in a terminal and post the output (you may need to unmount the partition first):
~> driveinfo [partition name]
How was this FAT32 partition mounted (automatically at boot, in DriveSetup, mount command in a terminal...)?
The FAT driver is currently configured to force read-only status when mounting a partition large enough to hold a 1 TB file (this is meant to be a temporary limitation until the revised driver undergoes more testing). That this didn't happen suggests that maybe the driver made a mistake in determining the size of the partition at mount time. Later, when you tried to work with a file, the crash might have been caused by the driver working with this incorrect size information.
comment:4 by , 4 months ago
The "max 204799" in the panic message makes me think there was an overflow of sector count. A patch that should fix this is under review (https://review.haiku-os.org/c/haiku/+/8426). I am not set up to reproduce this bug on my system for testing though.
I still don't understand why the partition was not mounted read-only based on its size, since at the time the ticket was submitted, the limit for mounting read-write was below 1 TB (the limit has since been increased to 2 TB in the master branch). Maybe the user built the installation file from source and had turned off the code to force read-only mounting.
KDL Image