FAT: prevent sector count overflow

* Don't let users format a volume with more sectors than can fit in
  the 32 bits that the FAT spec provides for storing the sector count on
  disk. Since dosfs_initialize() assumes 512-byte sectors, this
  will truncate FAT volumes at ~2.2 TB when a user tries for format
  a partition larger than that.
* Mount read-only if the sector count read from disk is lower than it
  should be.
* Account for an unrelated overflow in struct device_geometry that
  could theoretically occur when mounting a large FAT image file.
* Set the struct mount read-only flag earlier during mounting, to
  avoid a fillinusemap error when changing to read-only inside
  fat_volume_init.
* Addresses #19079.

Change-Id: I3d15940dc18f50e5c8562fefee3b1749c4b93b6f
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8426
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>